--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "spider-task-2",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:8000",
+  "proxy": "http://localhost:8000",
   "dependencies": {
+    "@syncfusion/ej2-react-calendars": "^22.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.14.2",
